--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 **.__pycache__
-**.ipynb_checkpoints
-**.vscode
-**.Font
-**.log
+**.ipynb_checkpoints/
+**.vscode/
+**.Font/
+**.logs/
 
 *.mp3
 *.jpg
